# kyf-furia-backend

./: Dockerfile  README.md  docker-compose.yml  main.py  nixpacks.toml  pyproject.toml  railpack.json  requirements.txt
src/modules/related_links/: related_links_controller.py  related_links_repository.py  related_links_usecase.py  related_links_viewmodel.py
src/modules/signin/: signin_controller.py  signin_repository.py  signin_usecase.py  signin_viewmodel.py  signup_controller.py  signup_usecase.py
src/modules/signup/: signup_controller.py  signup_repository.py  signup_usecase.py
src/modules/verify_token/: verify_token_controller.py  verify_token_repository.py  verify_token_usecase.py  verify_token_viewmodel.py
src/shared/decorators/: token_required.py
src/shared/entities/: User.py
src/shared/utils/: create_jwt.py  face_validation.py  mongo_connect.py  verify_token.py
